Added config file and added para in index file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning GIT</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      I learned how to initialize git, add file, commit, see difference, add all
+      the files with add.
+    </p>
+    <p>I'll keep learning</p>
+  </body>
 </html>
