Added list in master

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Learning GIT</title>
   </head>
   <body>
+
+    <ul>
+      <li> Potato</li>
+      <li> Tomato</li>
+      <li> Cabbage</li>
+    </ul>
     <p>
       I learned how to initialize git, add file, commit, see difference, add all
       the files with add.
